<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="ru.bmstu.iu9.vrsocialnetwork.ui.home.HomeFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/list_container" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.bmstu.iu9.vrsocialnetwork.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.bmstu.iu9.vrsocialnetwork.ui.notifications.NotificationsFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_notifications" />
</navigation>