<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".ui.preview.PostPreviewFragment">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/content_preview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:contentDescription="@string/content_preview" />

	<ProgressBar
		android:id="@+id/uploading_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/preview_buttonBar"
		app:layout_constraintEnd_toEndOf="parent"
		android:visibility="gone"/>

	<LinearLayout
		android:id="@+id/preview_buttonBar"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			style="?android:attr/borderlessButtonStyle"
			android:id="@+id/preview_retryButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/retry"
			android:layout_weight=".5"/>
		<Button
			style="?android:attr/borderlessButtonStyle"
			android:id="@+id/preview_submitButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/submit"
			android:layout_weight=".5"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>